syntax = "proto3";

package v1;

import "google/protobuf/wrappers.proto";
import "model.proto";

message Client {
  google.protobuf.StringValue host = 1;

  enum ClientType {
    UNKNOWN = 0;
    SDK = 1;
    AGENT = 2;
  }

  ClientType type = 2;

  google.protobuf.StringValue version = 3;

  Location location = 4;
}
